# tensorflow-lite-micro

./: CMakeLists.txt  README.md
examples/hello_world/: CMakeLists.txt
examples/hello_world/linux/: output_handler.cpp
examples/keyword_benchmark/: CMakeLists.txt
examples/magic_wand/: CMakeLists.txt
examples/micro_speech/: CMakeLists.txt
examples/person_detection/: CMakeLists.txt  image_provider.cpp  main_functions.cpp
examples/person_detection/tensorflow/lite/micro/tools/make/downloads/person_model_int8/: person_detect_model_data.cpp
examples/ssd_mobilenet/: CMakeLists.txt  main.cpp  main_functions.cpp  model_settings.cpp  model_settings.h  nms.cpp  nms.h
examples/yolo3/: CMakeLists.txt  main.cpp  main_functions.cpp  main_functions.h  yolo4.py  yolov3-wyze-416-int8.tflite
src/tensorflow/lite/c/: builtin_op_data.h
src/tensorflow/lite/core/api/: flatbuffer_conversions.cpp  flatbuffer_conversions.h  op_resolver.cpp
src/tensorflow/lite/kernels/internal/reference/integer_ops/: logistic.h
src/tensorflow/lite/micro/: all_ops_resolver.cpp  compatibility.h  micro_allocator.cpp  micro_interpreter.cpp  micro_interpreter.h  micro_mutable_op_resolver.h  simple_memory_allocator.cpp
src/tensorflow/lite/micro/kernels/: activations.cpp  dequantize.cpp  detection_postprocess.cpp  exp.cpp  logistic.cpp  micro_ops.h  quantize.cpp  resize_bilinear.cpp  transpose.cpp
src/tensorflow/lite/micro/kernels/cmsis-nn/: conv.cpp
src/tensorflow/lite/micro/linux/: debug_log.cpp  micro_time.cpp
src/tensorflow/lite/micro/memory_planner/: greedy_memory_planner.cpp  linear_memory_planner.cpp
src/tensorflow/lite/micro/rp2/: debug_log.cpp
src/tensorflow/lite/micro/testing/: micro_test.h
src/tensorflow/lite/schema/: compile.sh  schema.fbs  schema_generated.h  schema_utils.cpp  schema_utils.h
tests/greedy_memory_planner_test/: CMakeLists.txt
tests/kernel_activations_test/: CMakeLists.txt
tests/kernel_add_test/: CMakeLists.txt
tests/kernel_arg_min_max_test/: CMakeLists.txt
tests/kernel_ceil_test/: CMakeLists.txt
tests/kernel_circular_buffer_test/: CMakeLists.txt
tests/kernel_comparisons_test/: CMakeLists.txt
tests/kernel_concatenation_test/: CMakeLists.txt
tests/kernel_conv_test/: CMakeLists.txt
tests/kernel_depthwise_conv_test/: CMakeLists.txt
tests/kernel_dequantize_test/: CMakeLists.txt
tests/kernel_detection_postprocess_test/: CMakeLists.txt
tests/kernel_elementwise_test/: CMakeLists.txt
tests/kernel_exp_test/: CMakeLists.txt  exp_test.cpp
tests/kernel_floor_test/: CMakeLists.txt
tests/kernel_fully_connected_test/: CMakeLists.txt
tests/kernel_hard_swish_test/: CMakeLists.txt
tests/kernel_l2norm_test/: CMakeLists.txt
tests/kernel_logical_test/: CMakeLists.txt
tests/kernel_logistic_test/: CMakeLists.txt
tests/kernel_maximum_minimum_test/: CMakeLists.txt
tests/kernel_mul_test/: CMakeLists.txt
tests/kernel_neg_test/: CMakeLists.txt
tests/kernel_pack_test/: CMakeLists.txt
tests/kernel_pad_test/: CMakeLists.txt
tests/kernel_pooling_test/: CMakeLists.txt
tests/kernel_prelu_test/: CMakeLists.txt
tests/kernel_quantization_util_test/: CMakeLists.txt
tests/kernel_quantize_test/: CMakeLists.txt
tests/kernel_reduce_test/: CMakeLists.txt
tests/kernel_reshape_test/: CMakeLists.txt
tests/kernel_resize_nearest_neighbor_test/: CMakeLists.txt
tests/kernel_round_test/: CMakeLists.txt
tests/kernel_shape_test/: CMakeLists.txt
tests/kernel_softmax_test/: CMakeLists.txt
tests/kernel_split_test/: CMakeLists.txt
tests/kernel_split_v_test/: CMakeLists.txt
tests/kernel_strided_slice_test/: CMakeLists.txt
tests/kernel_sub_test/: CMakeLists.txt
tests/kernel_svdf_test/: CMakeLists.txt
tests/kernel_tanh_test/: CMakeLists.txt
tests/kernel_unpack_test/: CMakeLists.txt
tests/linear_memory_planner_test/: CMakeLists.txt
tests/memory_arena_threshold_test/: CMakeLists.txt
tests/memory_helpers_test/: CMakeLists.txt
tests/micro_allocator_test/: CMakeLists.txt
tests/micro_error_reporter_test/: CMakeLists.txt
tests/micro_interpreter_test/: CMakeLists.txt
tests/micro_mutable_op_resolver_test/: CMakeLists.txt
tests/micro_string_test/: CMakeLists.txt
tests/micro_time_test/: CMakeLists.txt
tests/micro_utils_test/: CMakeLists.txt
tests/recording_micro_allocator_test/: CMakeLists.txt
tests/recording_simple_memory_allocator_test/: CMakeLists.txt
tests/simple_memory_allocator_test/: CMakeLists.txt
tests/testing_helpers_test/: CMakeLists.txt
